--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 .gradient-background {
-  height: 600px;
+  height: 100%;
    background: linear-gradient(62deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
      animation: gradient 15s ease infinite; 
       background-size: 400% 400%;
