--- a/styles.css
+++ b/styles.css
@@ -28,3 +28,10 @@
      background-position: 0% 50%;
   }
 }
+
+h1{
+    font-size: 50px;
+    font-weight: 120;
+    color: #ffffff;
+    letter-spacing: 0.05em;
+}
