--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,12 @@
 .gradient-background {
-  height: 100%;
-  width: 100%;
-   background: linear-gradient(62deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
-     animation: gradient 15s ease infinite; 
-      background-size: 100% 100%;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(62deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
+  animation: gradient 15s ease infinite; 
+  background-size: 100% 100%;
   
 }
 @-webkit-keyframes gradient{
